현재 프로젝트 전체 반영